--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button class="side-bar" onclick="toggleBio()">Click Me(Bio,PS) </button>
         <div class="bio-container">
             <div class="bio">
-                <img src="/Images,videos/me.JPG" alt="me">
+                <img src="Images,videos/me.JPG" alt="me">
                 <div class="text-container">
                     <h2>Name: Erkhembileg</h2>
                     <h2>Age: currently 17, will turn 18 in August.</h2>
