--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#Family" class="dropdown-links">Family responsibilities</a></li>
                 <li><a href="#sports" class="dropdown-links">Sports</a></li>
                 <li><a href="#graphicdesign" class="dropdown-links">Graphic design</a></li>
+                <li><a href="#books" class="dropdown-links">Books</a></li>
             </ul>
     </li>
               </ul>
@@ -261,7 +262,7 @@
 
     <!--Graphic design-->
 
-    <div class="bar2" id="graphicdesign">
+    <div class="bar2" id="books">
         <h1><a href="https://www.instagram.com/chadvardesign/" target="_blank">Graphic design</a></h1>
     </div>
     <div class="img-section">
