--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
     <!--Graphic design-->
 
-    <div class="bar2" id="books">
+    <div class="bar2" id="graphicdesign">
         <h1><a href="https://www.instagram.com/chadvardesign/" target="_blank">Graphic design</a></h1>
     </div>
     <div class="img-section">
